--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,26 @@
 .App {
-  text-align: center;
+  padding: 30px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+select {
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.details-container {
+  display: flex;
 }
 
-.App-title {
-  font-size: 1.5em;
+.details-container div {
+  width: 50%;
 }
 
-.App-intro {
-  font-size: large;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+li {
+  padding: 5px;
 }
